force-app/main/default/objects/Job_Posting__c/fields/Listing_Content__c.field-meta.xml
<CustomField>
    <fullName>Listing_Content__c</fullName>
    <label>Listing Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>