force-app/main/default/objects/Job_Posting__c/fields/Log_In_Page__c.field-meta.xml
<CustomField>
    <fullName>Log_In_Page__c</fullName>
    <label>Log In Page</label>
    <type>Url</type>
</CustomField>