force-app/main/default/objects/Job_Posting__c/listViews/Active_Job_Postings.listView-meta.xml
<ListView>
    <fullName>Active_Job_Postings</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>Log_In_Page__c</columns>
    <columns>Budget__c</columns>
    <columns>Budget_Period__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Job Postings</label>
</ListView>